[tool.poetry]
name = "odin"
version = "0.1.0"
description = "run with me"
authors = ["matthew <homekeeper89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
flask = "^2.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-picked = "^0.4.6"
pytest-testmon = "^1.2.0"
pytest-watch = "^4.2.0"
black = "21.4b2"
isort = "^5.9.3"
ipdb = "^0.13.9"
flasgger = "^0.9.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
